2009-05-25  Evgeny M. Zubok <evgeny.zubok@tochka.ru>
	
	* src/s3_driver.c:
	* src/s3_video.c:
	
	Enable Xv extension for Trio64V+ (thanks to Egor Ivanov for 
	testing on real hardware) and Trio64UV+ (Tested only on Trio64V2 by
	overriding Chipset with "Trio64UV+" but not on real hardware).

	S3 Trio64V+ now using NewMMIO. Trio64V+ chips have the same ChipId
	as Trio32/64 but only with chip revision greater or eq 0x40. So if 
	you have problems with NewMMIO, you may override ChipRev in "Device" 
 	section of your xorg.conf: "ChipRev" 0x00. Note: disabling the NewMMIO 
	also disables overlay video (Xv) because it isn't implemented for
	Old MMIO yet.
	
2009-05-04  Evgeny M. Zubok <evgeny.zubok@tochka.ru>

	* src/s3_driver.c:
	* src/s3_shadow.c:

	Add shadowFB option. It can be used to speedup drawing when
	hardware acceleration is unwanted or unavailable (for colour depth
	24 with 24 bpp framebuffer, for example). shadowFB is disabled by
	default. Enabling shadowFB option disables HW acceleration. Thanks
	to Egor Ivanov for initial porting of shadowFB from s3virge.

	Interlace mode support.

	Close bug #14999.
	
2008-07-06  Evgeny M. Zubok <evgeny.zubok@tochka.ru>

	* src/s3_video.c: 

	Streams Processor initialization.

	XVideo support for 16, 24 and 32 bpp (only for TRIO64V2).

	* src/s3_driver.c: 

	Add XVideo option (enabled by default).

	Replace "swcursor" by "hwcursor" option (HW cursor 
	not implemented yet for all chipsets).

	Close bug #5527: 24-bit colour depth support (24bpp and 
	32bpp framebuffer) for TRIOs. Acceleration doesn't work
	with packed colour mode (24 bpp FB) but works with 32bpp 
	framebuffer mode (hardware limitation? -- need data).

	Fix system hang-up when switching between console and X session.

	Some minor changes of driver messages.

2008-02-23  Evgeny M. Zubok <evgeny.zubok@tochka.ru>

	* src/s3_driver.c: Add DPMS support for S3 Trio64V2 and possibly
	others (need testing): S3 Trio64UV+. S3 Aurora64V+ and S3 Trio32/64