@@ -1,3 +1,13 @@
+2009-06-25  Evgeny M. zubok <evgeny.zubok@tochka.ru>
+
+	* src/s3_driver.c:
+	Revert the old behaviour when the BIOS settings are used for
+	intialization of DRAM/VRAM timings, i. e. we don't touch the
+	timings during initialization phase until any memory option (like
+	slow_edodram) is specified.
+	
+	Add manual page.	
+
 2009-05-25  Evgeny M. Zubok <evgeny.zubok@tochka.ru>
 	
 	* src/s3_driver.c:
@@ -20,7 +30,7 @@
 	* src/s3_shadow.c:
 
 	Add shadowFB option. It can be used to speedup drawing when
-	hardware acceleration is unwanted or unavailable (for colour depth
+	hardware acceleration is undesirable or unavailable (for colour depth
 	24 with 24 bpp framebuffer, for example). shadowFB is disabled by
 	default. Enabling shadowFB option disables HW acceleration. Thanks
 	to Egor Ivanov for initial porting of shadowFB from s3virge.
